--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,22 +10,23 @@ dependencies:
   flutter:
     sdk: flutter
   supabase_flutter: ^2.8.3
-  camera: ^0.10.0+1
+  camera: ^0.11.1
   path_provider: ^2.1.1
   path: ^1.8.3
-  geolocator: ^10.0.0
-  image_picker: ^0.8.7+3
+  geolocator: ^14.0.0
+  image_picker: ^1.1.2
   fluttertoast: ^8.0.9
   firebase_core: ^3.12.1
   intl: ^0.20.2
   shared_preferences: ^2.2.2
-  permission_handler: ^10.4.0
-  flutter_local_notifications: ^14.0.0
+  permission_handler: ^12.0.0+1
+  flutter_local_notifications: ^19.1.0
   timeago: ^3.2.2
-  geocoding: ^2.1.1
+  geocoding: ^3.0.0
   url_launcher: ^6.1.7
   tflite_flutter: ^0.11.0
-  image: ^3.2.0
+  tflite: ^1.1.2
+  image: ^4.5.4
 
 dev_dependencies:
   flutter_test:
